added paid user model field, fixed sysManager views and roles

--- a/portfolios/templates/portfolios/portfolio_list.html
+++ b/portfolios/templates/portfolios/portfolio_list.html
@@ -19,7 +19,7 @@
     <div class="container">
       <div class="row d-lg-flex align-items-center">
         <div class="col-6">
-          <h1 id="font-dark">Bem vindo, {{user}} !</h1> <br>
+          <h1 id="font-dark">Bem vindo, {{user}}!</h1> <br>
           <p id="font-darkish">Aqui estão todos os portfolios que você já cadastrou,
                 eles são a base de todas as informações que você acompanha.</p>
         </div>
@@ -60,68 +60,75 @@
 {% block content %}
 
 <div class="container content-section">
-  <div class="row">
-
-
-    {% for portfolio, valorByTipo in portfolios_completo.items  %}
-
-          <div class="card portfolio-card m-3" style="width: 18rem;">
-              <div class="card-top p-2">
-                <div class="container">
-                  <div class="row">
-                    <p id="light-card">Performance:</p>
-                  </div>
-                  <div class="row">
-                    <div class="col">
+  {% if not portfolios_exist %}
+    <div class="row d-lg-flex justify-content-center m-4">
+      <div class="alert alert-danger m-5 d-lg-flex justify-content-center" role="alert" >
+        <a href="{% url 'portfolios:create' %}">
+          <h2 id="font-dark"> {{user}}, tudo começa criando um portfolio, então..  </h2>
+          <p id="font-darkish"> Criar portfolio! </p>
+        </a>
+      </div>
+    </div>
+    {% else %}
+      {% for portfolio, valorByTipo in portfolios_completo.items  %}
+        <div class="row">
+            <div class="card portfolio-card m-3" style="width: 18rem;">
+                <div class="card-top p-2">
+                  <div class="container">
+                    <div class="row">
+                      <p id="light-card">Performance:</p>
                     </div>
-                    <div class="col">
-                      <div class="card-top-frame d-lg-flex align-items-center p-2 m-1">
-                        <h1>{{ ganho }}%</h1>
+                    <div class="row">
+                      <div class="col">
+                      </div>
+                      <div class="col">
+                        <div class="card-top-frame d-lg-flex align-items-center p-2 m-1">
+                          <h1>{{ ganho }}%</h1>
+                        </div>
+                      </div>
+                      <div class="col">
                       </div>
                     </div>
-                    <div class="col">
+                    <div class="row card-top-legend pt-1 m-0 text-right">
+                      <p class="p-0 m-0" id="light-card">Valor Inicial: {{valorTotalAplicado}}</p>
+                      <p class="p-0 m-0" id="light-card">Valor Atualizado: {{valorTotalAtualizado}}</p>
                     </div>
-                  </div>
-                  <div class="row card-top-legend pt-1 m-0 text-right">
-                    <p class="p-0 m-0" id="light-card">Valor Inicial: {{valorTotalAplicado}}</p>
-                    <p class="p-0 m-0" id="light-card">Valor Atualizado: {{valorTotalAtualizado}}</p>
-                  </div>
 
+                  </div>
                 </div>
-              </div>
-              <div class="card-body">
-                <h3 class="c-title text-center" id="font-dark">{{ portfolio.nome }}</h3>
-                <p class="c-text" id="font-darkish">Criado em: {{ portfolio.data_criacao.date }}</p>
-              </div>
-            <ul class="list-group list-group-flush p-0 m-0">
-              {% for tipo, valores in valorByTipo.items %}
-                <li class="list-group-item">
-                  <p> {{tipo}} : {{valores.valor}} </p>
-                </li>
-              {% endfor %}
-            </ul>
-            <div class="card-body p-0">
-              <div class="row card-bottom ">
-                <div class="col card-buton-bottom-right">
-                    <a href="{% url 'portfolios:manage' pk=portfolio.pk %}">
+                <div class="card-body">
+                  <h3 class="c-title text-center" id="font-dark">{{ portfolio.nome }}</h3>
+                  <p class="c-text" id="font-darkish">Criado em: {{ portfolio.data_criacao.date }}</p>
+                </div>
+              <ul class="list-group list-group-flush p-0 m-0">
+                {% for tipo, valores in valorByTipo.items %}
+                  <li class="list-group-item">
+                    <p> {{tipo}} : {{valores.valor}} </p>
+                  </li>
+                {% endfor %}
+              </ul>
+              <div class="card-body p-0">
+                <div class="row card-bottom ">
+                  <div class="col card-buton-bottom-right">
+                      <a href="{% url 'portfolios:manage' pk=portfolio.pk %}">
+                        <div class="p-1 m-0 full-width">
+                          <p class="text-center">Editar</p>
+                        </div>
+                      </a>
+                  </div>
+                  <div class="col card-buton-bottom-left">
+                    <a href="{% url 'portfolios:delete' pk=portfolio.pk %}">
                       <div class="p-1 m-0 full-width">
-                        <p class="text-center">Editar</p>
+                        <p class="text-center">Excluir</p>
                       </div>
                     </a>
-                </div>
-                <div class="col card-buton-bottom-left">
-                  <a href="{% url 'portfolios:delete' pk=portfolio.pk %}">
-                    <div class="p-1 m-0 full-width">
-                      <p class="text-center">Excluir</p>
-                    </div>
-                  </a>
+                  </div>
                 </div>
               </div>
-            </div>
-         </div>
+           </div>
 
-    {% endfor %}
-
+      {% endfor %}
+    {% endif %}
   </div>
 </div>
 
