--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,7 @@
 
         </ul>
 
+        {% if user.is_staff %}
         <ul class="navbar-nav ml-auto d-lg-flex align-items-center">
 
           <li class="nav-item ml-auto align-middle">
@@ -43,7 +44,7 @@
               <span> SysManager </span>
             </a>
           </li>
-
+        {% endif %}
         </ul>
 
         <ul class="navbar-nav ml-auto d-lg-flex align-items-center">
