Index page v1 ajusted

--- a/templates/base.html
+++ b/templates/base.html
@@ -80,6 +80,19 @@
       {% endblock %}
     </div>
 
+    <div class="footer p-2 mt-5">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <img src="{% static 'HaluuraApp/imgs/logo-icon-transp.png' %}" width="45" height="45" alt="">
+            Kapytalize by
+            <a href="https://www.linkedin.com/in/luiz-fernando-meira-filho-5267664a/">
+              <span class="pink-destaque p-1"><strong>FernandoMeira</strong></span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
 
   </body>
 </html>
