--- a/portfolios/templates/portfolios/portfolio_list.html
+++ b/portfolios/templates/portfolios/portfolio_list.html
@@ -83,7 +83,7 @@
                       </div>
                       <div class="col">
                         <div class="card-top-frame d-lg-flex align-items-center p-2 m-1">
-                          <h1>{{ ganho }}%</h1>
+                          <h1>{{ ganho|floatformat:'0' }}%</h1>
                         </div>
                       </div>
                       <div class="col">
