--- a/portfolios/templates/portfolios/resumo.html
+++ b/portfolios/templates/portfolios/resumo.html
@@ -13,8 +13,8 @@
 
 
     <div class="container-fluid">
-      <div class="row resumo-header shadow-lg m-2">
-        <div class="col-4 d-lg-flex justify-content-center">
+      <div class="row resumo-header shadow-lg m-3">
+        <div class="col-4 d-flex justify-content-center">
           <div class="circle m-4">
             <div class="circleContent">
                <div class="circleValue">{{dadosTotais.GanhoPerc}}%</div>
@@ -24,7 +24,7 @@
         </div>
         <div class="col-4">
           <div class="container macro-dados m-2">
-            <div class="d-lg-flex justify-content-center m-4">
+            <div class="d-flex justify-content-center m-4">
 
             </div>
             <div class="mdados-values m-0">
@@ -48,10 +48,10 @@
       </div>
       <div class="row">
         <div class="col-12">
-          <div class="d-lg-flex mt-4 justify-content-center m-1">
+          <div class="d-flex mt-4 justify-content-center m-1">
             <h3 class="strong-purple">Desempenho por Tipo</h3>
           </div>
-            <div class="row macros-container w-100 p-2 m-1 d-lg-flex align-items-center">
+            <div class="row macros-container w-100 p-2 m-1 d-flex align-items-center">
               {% for tipo,dadoTipo in dadosTipo.items  %}
               <div class="col m-2 macros-card p-3 shadow">
                 <div class="align-items-center" id="macros-frame">
@@ -60,14 +60,14 @@
                   </div>
                   <div class="row">
                     <div class="col m-2">
-                      <div class="macros-circle d-lg-flex m-1 mb-2 p-2 justify-content-center">
+                      <div class="macros-circle d-flex m-1 mb-2 p-2 justify-content-center">
                         <p class="text-center h3"> {{ dadoTipo.GanhoPerc }}% </p>
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="container macro-dados m-2">
-                  <div class="d-lg-flex justify-content-center p-1 m-1">
+                  <div class="d-flex justify-content-center p-1 m-1">
                     {% with tipo|removeBlank as tipoAtivo %}
                     <img class="m-2" src="{% static 'HaluuraApp/imgs/'|add:tipoAtivo|add:'iconP.png' %}" width="35" height="35" alt="">
                     {% endwith %}
@@ -83,20 +83,20 @@
               </div>
               {% endfor %}
           </div>
-          <div class="row macros-container w-100 p-3 m-2 d-lg-flex justify-content-center align-items-center">
+          <div class="row macros-container w-100 p-3 m-2 d-flex justify-content-center align-items-center">
             <div class="d-block justify-content-center m-1 ">
               <h3 class="strong-purple d-block">Informações Detalhadas</h3>
             </div>
             <br>
             {% for tipo,dadoTipo in dadosTipo.items  %}
             <div class="col-12 table-frame m-1 shadow-sm">
-              <div class="d-lg-flex justify-content-center">
+              <div class="d-flex justify-content-center">
                 <h4 class="light-card">{{ tipo }}</h4>
               </div>
               <div class="row">
                 <div class="{{ 'col-1 table-label '|joinStr:tipo }}">
                 </div>
-                <div class="col-11 d-lg-flex justify-content-center">
+                <div class="col-11 d-flex justify-content-center">
                   <table class="table table-striped table-borderless table-hover table-sm">
                     <thead class="">
                       <tr  class="text-center" id="table-head-custom">
