--- a/static/HaluuraApp/css/master.css
+++ b/static/HaluuraApp/css/master.css
@@ -17,6 +17,11 @@
   color: #290a3a !important;
 }
 
+.pink-destaque{
+  background-color: #fb3769 !important;
+  border-radius: 3px;
+}
+
 h1,h2,h3,h4,h5, {
   font-weight: 500;
   font-family: 'Poppins', sans-serif;
@@ -46,6 +51,11 @@ a:hover {
 
 .full-width{
   width: 100%;
+}
+
+.body-logoff{
+  background-color: #511771;
+  color: white;
 }
 
 .body-logon{
@@ -324,28 +334,37 @@ nav#navbar-secondary a:hover{
   border-bottom: 2px solid white ;
 }
 
+/* ##### NAVBAR ##### */
+
+.footer{
+  background-color: #ca9de2;
+  width: 100%;
+  color: white;
+}
+
 /* ##### BUTTONS ##### */
 
 .buton-destaque {
-  background-color: #fc1953;
-  border: 2px solid #fb3769;
+  background-color: #fb3769;
   color: white;
-  padding: 20px;
+  font-size: 20px;
+  padding: 18px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   margin: 2px 2px;
-  border-radius: 22px;
+  border-radius: 12px;
 }
 
 .buton {
   background-color: transparent;
-  border: 2px solid #fb3769;
+  border: 4px solid #fb3769;
   color: white;
-  padding: 20px;
+  font-size: 18px;
+  padding: 18px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   margin: 2px 2px;
-  border-radius: 22px;
+  border-radius: 12px;
 }
