--- a/templates/base_logoff.html
+++ b/templates/base_logoff.html
@@ -20,41 +20,111 @@
 
   </head>
 
-  <body>
+  <body class="body-logoff">
 
-    <nav class="navbar navbar-expand-lg navbar-custom font-poppins" role="navigation" id="navbar">
+    <nav class="navbar navbar-expand-lg font-poppins" role="navigation" id="navbar">
       <div class="container">
         <a class="navbar-brand mynav" href="{% url 'home' %}">
-            <img src="{% static 'HaluuraApp/imgs/Logo-Brand-Transp.png' %}" width="200" height="60" alt="">
+            <img src="{% static 'HaluuraApp/imgs/Logo-Brand-Transp.png' %}" class="w-25 h-25" alt="">
         </a>
-
-        <ul class="navbar-nav ml-auto">
-          {% if user.is_authenticated %}
-          <li class="nav-item"> <a class="nav-link a-navbar" href="{% url 'accounts:logout' %}">Logout</a></li>
-          <li class="nav-item"> <a class="nav-link" href="{% url 'accounts:change_password' %}">Change your Password</a></li>
-          <li class="nav-item"> <a class="nav-link" href="{% url 'portfolios:list' %}">Portfolio List</a></li>
-          <li class="nav-item"> <a class="nav-link" href="{% url 'portfolios:create' %}">Add New Portfolio</a></li>
-          <li class="nav-item"> <a class="nav-link" href="{% url 'sysManager:check_cargas' %}">Check Cargas</a></li>
-          {% else %}
-            <li class="nav-item">
-              <a class="nav-link buton" href="{% url 'accounts:login' %}">Entrar</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link buton-destaque" href="{% url 'accounts:signup' %}">Criar Conta</a>
-            </li>
-          {% endif %}
+        <ul class="navbar-nav ml-auto d-lg-flex align-items-center">
+          <li class="nav-item ml-auto">
+            <a class="nav-link a-navbar" href="{% url 'accounts:login' %}">
+              <div class="buton">
+                <strong>Entrar</strong>
+              </div>
+            </a>
+          </li>
         </ul>
       </div>
     </nav>
 
-
     <div class="container">
-      <h1>This is Haluura test site</h1>
-      {% block content %}
-      {% endblock %}
+
+      <div class="row d-flex justify-content-center m-2 home-title-container">
+        <h2>Acompanhe seus investimentos de <strong>forma automática</strong></h2 >
+        <h5>Você cadastra seus investimentos uma vez, e nós cuidamos do resto (todo dia!)</h5>
+      </div>
+
+      <div class="row d-flex justify-content-center m-2 home-mockup-container ">
+        <a href="{% url 'accounts:signup' %}">
+          <div class="buton-destaque">
+            Cadastra-se gratuitamente
+          </div>
+        </a>
+      </div>
+
+      <div class="row d-flex justify-content-center m-4 home-mockup-container">
+        <img src="{% static 'HaluuraApp/imgs/pcMockFrontPagev2.png' %}" class="" alt="">
+      </div>
+
+      <div class="row d-flex justify-content-center m-5 home-title-container">
+        <h1><strong>Como funciona:</strong></h1>
+      </div>
+
+      <div class="row d-flex justify-content-center m-2 home-title-container">
+        <div class="col d-flex justify-content-center">
+          <div class="container">
+            <div class="row  d-flex justify-content-center">
+              <img src="{% static 'HaluuraApp/imgs/numberFrontPage-1.png' %}" class="m-1 d-block" alt="">
+            </div>
+            <div class="row d-flex justify-content-center mt-3">
+              <p class="h5 text-center d-block">Cadastre todos os seus investimentos <strong> uma vez</strong></p>
+            </div>
+          </div>
+        </div>
+        <div class="col d-flex justify-content-center">
+          <div class="container">
+            <div class="row  d-flex justify-content-center">
+              <img src="{% static 'HaluuraApp/imgs/numberFrontPage-2.png' %}" class="m-1 d-block" alt="">
+            </div>
+            <div class="row d-flex justify-content-center mt-3">
+              <p class="h5 text-center d-block">Nós vamos rastrear tudo sobre seus investimentos <strong>diariamente</strong></p>
+            </div>
+          </div>
+        </div>
+        <div class="col d-flex justify-content-center">
+          <div class="container">
+            <div class="row  d-flex justify-content-center">
+              <img src="{% static 'HaluuraApp/imgs/numberFrontPage-3.png' %}" class="m-1 d-block" alt="">
+            </div>
+            <div class="row d-flex justify-content-center mt-3">
+              <p class="h5 text-center d-block"><strong>Receba email todos os dias</strong> com o desempenho de seus investimentos</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row d-flex justify-content-center m-5 home-title-container border-top border-light">
+        <div class="container m-4">
+          <div class="row  d-flex justify-content-center">
+            <p class="h4 text-center d-block"><strong>Gaste seu tempo tomando boas decisões</strong>, deixe a parte chata com a gente.</p>
+          </div>
+          <div class="row d-flex justify-content-center mt-3">
+            <a href="{% url 'accounts:signup' %}">
+              <div class="buton-destaque">
+                Cadastra-se gratuitamente
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
 
     </div>
 
+  <div class="footer p-2 mt-5">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <img src="{% static 'HaluuraApp/imgs/logo-icon-transp.png' %}" width="45" height="45" alt="">
+          Kapytalize by
+          <a href="https://www.linkedin.com/in/luiz-fernando-meira-filho-5267664a/">
+            <span class="pink-destaque p-1"><strong>FernandoMeira</strong></span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
 
   </body>
 </html>
