--- a/static/HaluuraApp/css/master.css
+++ b/static/HaluuraApp/css/master.css
@@ -337,10 +337,17 @@ nav#navbar-secondary a:hover{
 /* ##### NAVBAR ##### */
 
 .footer{
-  background-color: #ca9de2;
+  background-color: #dad5dd;
   width: 100%;
   color: white;
 }
+
+#logo-brand{
+  width: 25%;
+  height: 25%;
+}
+
+
 
 /* ##### BUTTONS ##### */
 
@@ -358,13 +365,23 @@ nav#navbar-secondary a:hover{
 
 .buton {
   background-color: transparent;
-  border: 4px solid #fb3769;
+  border: 2px solid #fb3769;
   color: white;
-  font-size: 18px;
-  padding: 18px;
+  font-size: 14px;
+  padding: 12px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   margin: 2px 2px;
   border-radius: 12px;
+}
+
+/* ##### MEDIA QUERIES ##### */
+
+@media screen and (max-width: 768px) {
+  #logo-brand{
+    width: 75%;
+    height: 75%;
+  }
+
 }
