solved security problem in function views, improved a little the html email and login page

--- a/templates/html_email_template.html
+++ b/templates/html_email_template.html
@@ -116,12 +116,12 @@
                                                                                             mso-table-rspace: 0pt; width: 100%; box-sizing: border-box;">
                             <tbody>
                               <tr style="">
-                                <td colspan="4">
-                                  <h2 style="color:#fc6188; margin-left:5px;">Kapytalize.  </h2>
-                                </td>
-                                <td colspan="2" align="right">
-                                  <p style="color:#ffffff;margin-left:4px; margin-right:auto;"><strong style="margin-right:auto;">27/07/2019</strong></p>
-                                </td>
+                                <th colspan="4">
+                                  <h2 style="color:#fc6188; margin-left:5px;" align="left">Kapytalize.  </h2>
+                                </th>
+                                <th colspan="2" align="right">
+                                  <h3 style="color:#ffffff;margin-left:4px; margin-right:auto;" align=="right"><strong style="margin-right:auto;"><small>.</small></strong></h3>
+                                </th>
                               </tr>
                             </tbody>
                           </table>
