--- a/static/HaluuraApp/css/login.css
+++ b/static/HaluuraApp/css/login.css
@@ -3,11 +3,21 @@ body {
   background-color: #8866f4;
   color: #6c7378;;
   font-family: 'Poppins', sans-serif;
+  min-height: 100%;
+  font-size: 1.1em;
+}
+
+.custom-container{
+  width: 80%;
+  padding-right: 10px;
+  padding-left: 10px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .login-box {
   text-align: center;
-  width: 550px;
+  width: 50%;
   height: auto;
   background-color: white;
   padding: 60px;
@@ -31,7 +41,8 @@ body {
 }
 
 .logo {
-  height: 70px;
+  width: 90%;
+  height: 90%;
   margin-bottom: 30px;
 }
 .form-control {
@@ -63,4 +74,29 @@ body {
   box-sizing: border-box;
   border-top: 0.5px solid #E1E3E4;
   border-bottom: 0.5px solid #E1E3E4;
+}
+
+/* Media queries */
+@media screen and (max-width: 1250px) {
+
+  .logo{
+    width: 70%;
+    height: 70%;
+  }
+
+  .custom-container{
+    width: 100%;
+    padding-right: 3px;
+    padding-left: 3px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  .login-box {
+    text-align: center;
+    width: 100%;
+    height: 80%;
+    padding: 30px;
+  }
+
 }
