--- a/static/HaluuraApp/css/master.css
+++ b/static/HaluuraApp/css/master.css
@@ -22,6 +22,13 @@
   border-radius: 3px;
 }
 
+body{
+  position: relative;
+  margin: 0;
+  display: block;
+  min-height: 100%;
+}
+
 h1,h2,h3,h4,h5, {
   font-weight: 500;
   font-family: 'Poppins', sans-serif;
@@ -42,9 +49,30 @@ a:hover {
   color: #fb3769;
 }
 
+.custom-container{
+  position: relative;
+  width: 100%;
+  max-width: 1020px;
+  margin: 0 auto;
+  padding: 0 20px;
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: 550px) {
+
+  .custom-container{
+    width: 85%;
+  }
+
+}
 .section-title{
   position:relative;
   text-align: center
+}
+
+.mock-image{
+  width: 100%;
+  height: 100%;
 }
 
 /* ##### COINTAINER AND BIG BLOCKS ##### */
@@ -382,6 +410,16 @@ nav#navbar-secondary a:hover{
   #logo-brand{
     width: 75%;
     height: 75%;
+  }
+
+}
+
+/* cellphone */
+@media screen and (max-width: 576px) {
+
+  .body-logoff {
+    max-width: 520px;
+    height: 100%;
   }
 
 }
