--- a/static/HaluuraApp/css/master.css
+++ b/static/HaluuraApp/css/master.css
@@ -13,6 +13,10 @@
   font-size: 1rem;
 }
 
+#font-small{
+  font-size: .95rem !important;
+}
+
 .strong-purple{
   color: #290a3a !important;
 }
@@ -22,11 +26,21 @@
   border-radius: 3px;
 }
 
-body{
-  position: relative;
+html, body{
   margin: 0;
   display: block;
-  min-height: 100%;
+  min-height: 980px;
+  height: 100%;
+
+}
+
+footer {
+  position: relative;
+  /* negative value of footer height */
+  height: 80px;
+  clear: both;
+  width:100%;
+  font-size: 0.7rem;
 }
 
 h1,h2,h3,h4,h5, {
@@ -47,6 +61,12 @@ a {
 
 a:hover {
   color: #fb3769;
+}
+
+
+
+#main {
+  min-height: 100%;
 }
 
 .custom-container{
@@ -355,19 +375,22 @@ nav#navbar-secondary a:hover{
 
 .nav-center {
   position: relative;
-  left: 28%;
 }
 
 .active {
   border-bottom: 2px solid white ;
 }
 
-/* ##### NAVBAR ##### */
+/* ##### FOOTER ##### */
 
 .footer{
-  background-color: #dad5dd;
+  background-color: #0b0011;
   width: 100%;
+  height: 100%;
   color: white;
+  position: relative;
+  margin-top: -400px;
+  font-size: 0.5em !important;
 }
 
 #logo-brand{
@@ -391,6 +414,18 @@ nav#navbar-secondary a:hover{
   border-radius: 12px;
 }
 
+.buton-purple {
+  background-color: #290a3a;
+  color: white;
+  font-size: 1rem;
+  padding: 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 2px 2px;
+  border-radius: .25rem;
+}
+
 .buton {
   background-color: transparent;
   border: 2px solid #fb3769;
@@ -403,6 +438,12 @@ nav#navbar-secondary a:hover{
   margin: 2px 2px;
   border-radius: 12px;
 }
+
+/* ##### MODALS ##### */
+#PortfolioHelpModal {
+
+}
+
 
 /* ##### MEDIA QUERIES ##### */
 
